# OrigamiFarmOS

./: .gitignore  CONCEPT_NOTE.md  CONSTITUTION.md  IMPLEMENTATION_STATUS.md  README.md  ROADMAP.md
Handbook/: README.md
Handbook/04-Knowledge-Model/: 04.3-Observation-Model.md
Handbook/adr/: 03-Knowledge-Lifecycle.md  04-Observation-Before-Diagnosis.md  README.md
Handbook/glossary/: README.md  knowledge-model.md
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2469080936c5_initial_schema.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py  idempotent.py
backend/app/api/v1/: animals.py  auth.py  briefing.py  dairy.py  feed.py  flocks.py  locations.py  observations.py  poultry.py  recommendations.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  animal.py  farm.py  feed.py  knowledge.py  observation.py  production.py  user.py
backend/app/schemas/: animal.py  common.py  feed.py  knowledge.py  observation.py  production.py  user.py
backend/app/services/: ai_provider.py  correlation.py  feed.py  knowledge_engine.py  observations.py  recommendation.py  timeline.py
handbook/: 01-Vision.md  02-Ontology.md  03-Behavioral-Model.md  README.md  SUMMARY.md
handbook/04-Knowledge-Model/: 04.1-Purpose-and-Philosophy.md  04.1-README.md  04.10-AI-Governance.md  04.2-Knowledge-Lifecycle.md  04.3-Observation-Model.md  (+7 more)
product/: MVP_SCOPE.md  RELEASES.md  ROADMAP.md  TRACEABILITY.md
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+69 files in other folders)
